--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,30 +7,6 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10", "3.11", "3.12"]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: "pip"
-      - name: Install project
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e .[dev]
-      - name: Lint (ruff)
-        run: ruff check .
-      - name: Format check (ruff)
-        run: ruff format --check .
-      - name: Type check (mypy)
-        run: mypy src
-      - name: Tests
-        run: pytest
-
   node:
     runs-on: ubuntu-latest
     steps:
@@ -39,19 +15,13 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: ts/package.json
       - name: Install
-        working-directory: ts
-        run: npm ci || npm install
+        run: npm ci
       - name: Lint
-        working-directory: ts
         run: npm run lint
       - name: Typecheck
-        working-directory: ts
         run: npm run typecheck
-      - name: Build
-        working-directory: ts
-        run: npm run build
       - name: Test
-        working-directory: ts
         run: npm test
+      - name: Build
+        run: npm run build
