--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "allcoder",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Config toolkit CLI for real-world projects: validate, format, convert, merge, and redact JSON/YAML/TOML.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -42,6 +42,9 @@
   "type": "commonjs",
   "bin": {
     "allcoder": "dist/cli.js"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "repository": {
     "type": "git",
