--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,11 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
           always-auth: true
-      - name: Verify npm auth
+      - name: Configure npm auth
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
           npm --version
           npm whoami || true
       - name: Install
