--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,11 +15,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          registry-url: 'https://registry.npmjs.org'
+          cache: 'npm'
+          always-auth: true
       - name: Read package metadata
         id: meta
         run: |
-          echo "name=$(jq -r .name package.json)" >> "$GITHUB_OUTPUT"
-          echo "version=$(jq -r .version package.json)" >> "$GITHUB_OUTPUT"
+          echo "name=$(node -p \"require('./package.json').name\")" >> "$GITHUB_OUTPUT"
+          echo "version=$(node -p \"require('./package.json').version\")" >> "$GITHUB_OUTPUT"
       - name: Check if version already published
         id: check
         env:
@@ -33,13 +39,6 @@ jobs:
               echo "Version $VERSION already published; skipping."
             fi
           fi
-      - uses: actions/setup-node@v4
-        if: steps.check.outputs.skip != 'true'
-        with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
-          cache: 'npm'
-          always-auth: true
       - name: Configure npm auth
         if: steps.check.outputs.skip != 'true'
         env:
