--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,6 @@ on:
 
 permissions:
   contents: read
-  id-token: write
 
 jobs:
   npm-publish:
@@ -39,7 +38,7 @@ jobs:
         if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && inputs.publish == true) }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish --provenance --access public
+        run: npm publish --access public
       - name: Dry run (no publish)
         if: ${{ !(github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')) && !(github.event_name == 'workflow_dispatch' && inputs.publish == true) }}
         run: echo "Dry run completed (no publish)"
