--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "lint": "eslint src tests --ext .ts,.tsx,.js,.cjs,.mjs --no-error-on-unmatched-pattern",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run",
-    "prepublishOnly": "npm run lint && npm run typecheck && npm test && npm run build"
+    "prepublishOnly": "npm run lint && npm run typecheck && npm test && npm run build",
+    "release:patch": "bash scripts/release.sh patch",
+    "release:minor": "bash scripts/release.sh minor",
+    "release:major": "bash scripts/release.sh major",
+    "release:prerelease": "bash scripts/release.sh prerelease",
+    "release:dry": "bash scripts/release.sh patch --dry-run"
   },
   "keywords": [
     "json",
