--- a/package.json
+++ b/package.json
@@ -25,12 +25,10 @@
     "lint": "eslint src tests --ext .ts,.tsx,.js,.cjs,.mjs --no-error-on-unmatched-pattern",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run",
-    "prepublishOnly": "npm run lint && npm run typecheck && npm test && npm run build",
-    "release:patch": "bash scripts/release.sh patch",
-    "release:minor": "bash scripts/release.sh minor",
-    "release:major": "bash scripts/release.sh major",
-    "release:prerelease": "bash scripts/release.sh prerelease",
-    "release:dry": "bash scripts/release.sh patch --dry-run"
+    "checks": "npm run lint && npm run typecheck && npm test && npm run build",
+    "version:patch": "npm version patch -m 'chore: release v%s'",
+    "version:minor": "npm version minor -m 'chore: release v%s'",
+    "version:major": "npm version major -m 'chore: release v%s'"
   },
   "keywords": [
     "json",
@@ -47,9 +45,6 @@
   "type": "commonjs",
   "bin": {
     "allcoder": "dist/cli.js"
-  },
-  "publishConfig": {
-    "access": "public"
   },
   "repository": {
     "type": "git",
